<h5>3.03 Alpha 5   [2020-06-09]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- new alpha release (goffy)
- fixed bugs in creation of more files (goffy)
- added possibility to add own files via more files (goffy)

<h5>3.03 Alpha 4   [2020-05-11]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- missing folder name  (mamba)
- changed date integer to 11 (mamba)
- fix removed extra comma in generated FormUploadImage code (mamba)
- added schema (mamba)
- renamed "handler" to "Handler" in generated code (heyula/mamba)
- removed call to include Helper.php file (mamba)
- fix copying logo file (mamba)
- fix missing include of notification tpl (goffy)
- added first missing templates for notifications (goffy)
- added notification broken event (goffy)
- added possibility to store/restore testdata of created module (goffy)
- switched to single editor selector (mamba/goffy)
- changed constants class into interface (zyspec/goffy)
- added next steps notification event (goffy)
- added notification event new, modify, approve (goffy)
- added yoda condition (goffy)
- editor admin/user (mamba/goffy)
- added check quality/inconsistences of module data before building (goffy)
- fixed bugs in comments handling (goffy)
- added notification comments (goffy)
- added permission check approve (goffy)
- fixed bug for active settings (goffy)
- restructured admin language file/removed duuplicates (goffy)
- implementation new xoops_confirm - step 1 (goffy)
- transfered class::getInstance() to class _construct (mamba/goffy)
- code documentation cleaning (goffy)
- fixed bug with ENUM (mamba/goffy)
- fixed bug with changing field/table properties via image (mamba/goffy)
- implementation new xoops_confirm (geekwright/goffy)
- implemted rating system (stars, likes and numeric) (goffy)

<h5>3.03 Alpha 3   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.5
<hr>
- fix class names to case-sensitive  (heyula/mamba)
- fix folder names to case-sensitive  (mamba)
- add folder & file checkers (mamba)